Ajout fichiers .env pour simplifier l'installation
Les fichiers .env sont inclus car ils ne contiennent aucune donnee confidentielle.
Cela permet aux utilisateurs de lancer le projet sans configuration supplementaire.

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,8 @@
 # ============================================
 # FICHIERS SENSIBLES (NE JAMAIS COMMITER)
 # ============================================
-*.env
-.env
-.env.local
-.env.production
+# Les fichiers .env sont inclus pour simplifier l'installation
+# Aucune donnee confidentielle dans ces fichiers
 
 # ============================================
 # PYTHON
