Simplification du frontend: utilisation du mode developpement Vite
- Suppression du build (trop long et complexe)
- Utilisation de 'npm run dev' directement dans Docker
- Plus rapide a demarrer
- Hot reload disponible pour le developpement

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,19 @@
 # ============================================
-# FRONTEND REACT - Production Build
+# FRONTEND REACT - Development Mode
 # ============================================
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copier package.json et installer dépendances
+# Copier package.json et installer toutes les dependances
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm install
 
 # Copier tout le code
 COPY . .
 
-# Builder l'application React
-RUN npm run build
-
-# Installer serve pour servir le build
-RUN npm install -g serve
-
 # Exposer le port
 EXPOSE 5173
 
-# Démarrer le serveur
-CMD ["serve", "-s", "dist", "-l", "5173"]
+# Demarrer en mode developpement
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
